update Swagger for Live Demo
