# API/Micrometeorite_SwaggerV1.yaml
@@ -57,6 +57,24 @@ paths:
               $ref: "#/definitions/micrometeoriteFind"
 
   /micrometeoriteFind/{micrometeoriteFindId}:
+    get:
+      tags:
+        - "micrometeoriteFindById"
+      summary: "Returns micrometeorite Finding by ID"
+      operationId: "getMicrometeoriteFindById"
+      produces:
+        - "application/json"
+      parameters:
+        - name: micrometeoriteFindId
+          in: "path"
+          description: "micrometeoriteFindId"
+          required: true
+          type: "integer"
+      responses:
+        "200":
+          description: "Return Micrometeorite Finding by ID"
+          schema:
+            $ref: "#/definitions/micrometeoriteFind"
     delete:
       tags:
         - "micrometeoriteFind"
@@ -107,9 +125,9 @@ definitions:
       micrometeoriteFindComment:
         type: "string"
       micrometeoriteFindFinder:
-          $ref: "#/definitions/person"
+        $ref: "#/definitions/person"
       micrometeoriteFindRecorder:
-          $ref: "#/definitions/person"
+        $ref: "#/definitions/person"
       images: # <-- image embedded into JSON
         type: "array"
         items:
@@ -125,7 +143,7 @@ definitions:
         type: "string"
         format: "date-time"
       photographer:
-          $ref: "#/definitions/person"
+        $ref: "#/definitions/person"
       recordingInstrument:
         type: "string"
       magnification:
